Fixed a bug in 'NUS-WIDE-OBJECT' dataset loading

--- a/empirical-evaluation-jupyter.ipynb
+++ b/empirical-evaluation-jupyter.ipynb
@@ -74,6 +74,7 @@
     "                           ReutersEN,\n",
     "                           IS,\n",
     "                           CorelImageFeatures,\n",
+    "                           NUS_WIDE_OBJECT,\n",
     "                           ALOI,\n",
     "                           train_test_split,\n",
     "                           train_test_merge,\n",
@@ -99,7 +100,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+       "array([0, 1])"
       ]
      },
      "execution_count": 2,
@@ -108,11 +109,11 @@
     }
    ],
    "source": [
-    "dataset = CorelImageFeatures()\n",
+    "dataset = NUS_WIDE_OBJECT(min_pos_samples=2000)\n",
     "X_train, y_train, X_test, y_test = dataset.get_data()\n",
     "if y_train.ndim == 2:\n",
-    "    y_train = np.argmax(y_train, axis=1)\n",
-    "    y_test = np.argmax(y_test, axis=1)\n",
+    "    y_train = y_train[:, 0]\n",
+    "    y_test = y_test[:, 0]\n",
     "np.unique(y_train)\n",
     "np.unique(y_test)"
    ]
@@ -127,7 +128,7 @@
     {
      "data": {
       "text/plain": [
-       "((700, 7), (700,), (300, 7), (300,))"
+       "((21000, 225), (21000,), (9000, 225), (9000,))"
       ]
      },
      "execution_count": 3,
