Created and added EMNIST Letters multi-view dataset

--- a/empirical-evaluation-jupyter.ipynb
+++ b/empirical-evaluation-jupyter.ipynb
@@ -73,6 +73,7 @@
     "                           MultipleFeatures,\n",
     "                           MNIST_MV_Datasets,\n",
     "                           Fash_MNIST_MV_Datasets,\n",
+    "                           EMNIST_Letters_MV_Datasets,\n",
     "                           Nutrimouse,\n",
     "                           ReutersEN,\n",
     "                           IS,\n",
