--- a/empirical-evaluation-jupyter.ipynb
+++ b/empirical-evaluation-jupyter.ipynb
@@ -387,7 +387,7 @@
     "                                        unlabeled_data=c_unlabeled_data,\n",
     "                                        incl_oob=False,\n",
     "                                        alpha=alpha)\n",
-    "                    print(f\"{dNDF_mv.posterior_Qv=} {dNDF_mv.posterior_rho=}\")\n",
+    "                    # print(f\"{dNDF_mv.posterior_Qv=} {dNDF_mv.posterior_rho=}\")\n",
     "                    \n",
     "                    # Compute the risk of the multiview classifier\n",
     "                    _, mv_risk, v_risks = dNDF_mv.predict_MV(Xs_test, y_test)\n",
