--- a/empirical-evaluation-jupyter.ipynb
+++ b/empirical-evaluation-jupyter.ipynb
@@ -163,12 +163,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RUNS = range(5)\n",
+    "RUNS = range(20)\n",
     "\n",
     "OPTIMIZE_LAMBDA_GAMMA = True\n",
     "ALPHA = [1, 0.5, 1.1, 2]\n",
     "# ALPHA = [1.1]\n",
-    "MAX_ITER = 1500\n",
+    "MAX_ITER = 1000\n",
     "\n",
     "stump_config = {\n",
     "    \"name\": \"stump\",\n",
@@ -292,12 +292,17 @@
    ],
    "source": [
     "Xs, y = train_test_merge(Xs_train, y_train, Xs_test, y_test)\n",
+    "os.makedirs(\"results\", exist_ok=True)\n",
     "# iterate over the labeled data sizes\n",
     "for i, s1_size in enumerate(s_labeled_sizes):\n",
     "    print(colored(f\"############ Using {s1_size*100}% labeled data ############\", 'black', on_color='on_blue'))\n",
+    "    s_labeled_dir = 'results'+f\"/s_labeled-{int(s1_size*100)}\"\n",
+    "    os.makedirs(s_labeled_dir, exist_ok=True)\n",
     "    # iterate over the alpha values\n",
     "    for j, alpha in enumerate(ALPHA):\n",
     "        print(colored(f\"\\t############ Using {alpha=} ############\", 'black', on_color='on_blue'))\n",
+    "        alpha_dir = s_labeled_dir+ f\"/alpha-{alpha}\"\n",
+    "        os.makedirs(alpha_dir, exist_ok=True)\n",
     "        # iterate over the configurations\n",
     "        for k, config in enumerate(CFG):\n",
     "            print(colored(f\"\\t\\t############ Using {config['name']} ############\", 'black', on_color='on_blue'))\n",
@@ -409,6 +414,12 @@
     "                            \"Risk\": \"{:.3f}\".format(r),\n",
     "                            \"Bound\": \"{:.3f}\".format(b)}\n",
     "                        experiments[s1_size][alpha][config[\"name\"]].append(exp)\n",
+    "                        cfg_dir = alpha_dir + \"/\" + config[\"name\"]\n",
+    "                        os.makedirs(cfg_dir, exist_ok=True)\n",
+    "                        experiment_df = pd.DataFrame(exp)\n",
+    "                        # example: results/s_labeled-5/alpha-1/stump/MNIST_4vs9_20runs.csv\n",
+    "                        file_name = f\"{cfg_dir}/{dataset._name}_{label_1}vs{label_2}_{len(RUNS)}runs.csv\"\n",
+    "                        experiment_df.to_csv(file_name, sep=\" \", index=False)\n",
     "                    # TODO: add the posterior_Qv and posterior_rho to the experiment\n",
     "                del dNDF_mv, dNDF_concat"
    ]
@@ -419,10 +430,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.makedirs(\"results\", exist_ok=True)\n",
+    "os.makedirs(\"results-dup\", exist_ok=True)\n",
     "\n",
     "for s_labeled_size, size_exp in experiments.items():\n",
-    "    s_labeled_dir = 'results'+f\"/s_labeled-{int(s_labeled_size*100)}\"\n",
+    "    s_labeled_dir = 'results-dup'+f\"/s_labeled-{int(s_labeled_size*100)}\"\n",
     "    os.makedirs(s_labeled_dir, exist_ok=True)\n",
     "    for alpha, alpha_exp in size_exp.items():\n",
     "        alpha_dir = s_labeled_dir+ f\"/alpha-{alpha}\"\n",
@@ -433,7 +444,7 @@
     "            cfg_dir = alpha_dir + \"/\" + cfg\n",
     "            os.makedirs(cfg_dir, exist_ok=True)\n",
     "            experiment_df = pd.DataFrame(cfg_exp)\n",
-    "            # example: results/s_labeled-5/alpha-1/stump/MNIST_4vs9_20runs.csv\n",
+    "            # example: results-dup/s_labeled-5/alpha-1/stump/MNIST_4vs9_20runs.csv\n",
     "            file_name = f\"{cfg_dir}/{dataset._name}_{label_1}vs{label_2}_{len(RUNS)}runs.csv\"\n",
     "            experiment_df.to_csv(file_name, sep=\" \", index=False)\n"
    ]
