--- a/empirical-evaluation-jupyter.ipynb
+++ b/empirical-evaluation-jupyter.ipynb
@@ -109,7 +109,10 @@
     {
      "data": {
       "text/plain": [
-       "(array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9]), array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9]))"
+       "(array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+       "        17, 18, 19, 20, 21, 22, 23, 24, 25, 26]),\n",
+       " array([ 0,  1,  2,  3,  4,  6,  7,  8,  9, 11, 13, 14, 15, 16, 17, 18, 19,\n",
+       "        20, 22, 23, 24, 25, 26]))"
       ]
      },
      "execution_count": 2,
@@ -118,9 +121,10 @@
     }
    ],
    "source": [
-    "dataset = MultipleFeatures()\n",
+    "dataset = PTB_XL_plus()\n",
     "X_train, y_train, X_test, y_test = dataset.get_data()\n",
-    "# real_classes = dataset.get_real_classes(np.unique(y_train))\n",
+    "if isinstance(dataset, PTB_XL_plus):\n",
+    "    real_classes = dataset.get_real_classes(np.unique(y_train))\n",
     "\n",
     "Xs_train = []\n",
     "Xs_test = []\n",
@@ -145,7 +149,7 @@
     {
      "data": {
       "text/plain": [
-       "((1600, 216), (1600,), (400, 216), (400,))"
+       "((17436, 782), (17436,), (4359, 782), (4359,))"
       ]
      },
      "execution_count": 3,
@@ -167,7 +171,7 @@
     "\n",
     "OPTIMIZE_LAMBDA_GAMMA = True\n",
     "# ALPHA = [1, 0.5, 1.1, 2]\n",
-    "ALPHA = [1]\n",
+    "ALPHA = [1.1]\n",
     "MAX_ITER = 1000\n",
     "\n",
     "stump_config = {\n",
@@ -178,13 +182,13 @@
     "}\n",
     "weak_learners_config = {\n",
     "    \"name\": \"weak_learner\",\n",
-    "    \"n_estimators\": 500,\n",
+    "    \"n_estimators\": 100,\n",
     "    \"max_depth\": 3,\n",
     "    \"max_features\": 0.5,\n",
     "}\n",
     "strong_learners_config = {\n",
     "    \"name\": \"strong_learner\",\n",
-    "    \"n_estimators\": 100,\n",
+    "    \"n_estimators\": 500,\n",
     "    \"max_depth\": 6,\n",
     "    \"max_features\": 0.8,\n",
     "}\n",
@@ -194,8 +198,8 @@
     "\n",
     "EPOCHS = 15\n",
     "\n",
-    "TO_BINARY  = \"ovo\" # One of [\"ovr\", \"ovo\", \"other\",  None]\n",
-    "label_1 = 4 #np.unique(y_test)[np.where(real_classes == \"['NORM']\")[0][0]]\n",
+    "TO_BINARY  = \"ovr\" # One of [\"ovr\", \"ovo\", \"other\",  None]\n",
+    "label_1 = np.unique(y_test)[np.where(real_classes == \"['NORM']\")[0][0]]\n",
     "label_2 = 9\n",
     "\n",
     "POISON = False\n",
@@ -223,7 +227,7 @@
     {
      "data": {
       "text/plain": [
-       "{0.5: {1: {'strong_learner': []}}}"
+       "{0.5: {1.1: {'strong_learner': []}}}"
       ]
      },
      "execution_count": 5,
@@ -248,6 +252,23 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Transform to binary OVR (One Vs Rest) or OVO (One Vs One) if needed\n",
+    "if TO_BINARY == \"ovr\":\n",
+    "    Xs_train, y_train, Xs_test, y_test = multiclass_to_binary(Xs_train, y_train, Xs_test, y_test, type=TO_BINARY, label_1=label_1)\n",
+    "elif TO_BINARY == \"ovo\":\n",
+    "    Xs_train, y_train, Xs_test, y_test = multiclass_to_binary(Xs_train, y_train, Xs_test, y_test, type=TO_BINARY, label_1=label_1, label_2=label_2)\n",
+    "elif TO_BINARY == \"other\":\n",
+    "    y_train, y_test = other_binary_options(dataset, y_train, y_test)\n",
+    "else:\n",
+    "    print(colored(f\"WARNING: TO_BINARY={TO_BINARY}, continuing\", 'yellow'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -258,7 +279,7 @@
      "output_type": "stream",
      "text": [
       "\u001b[44m\u001b[30m############ Using 50.0% labeled data ############\u001b[0m\n",
-      "\u001b[44m\u001b[30m\t############ Using alpha=1 ############\u001b[0m\n",
+      "\u001b[44m\u001b[30m\t############ Using alpha=1.1 ############\u001b[0m\n",
       "\u001b[44m\u001b[30m\t\t############ Using strong_learner ############\u001b[0m\n",
       "\u001b[34m\n",
       "----------------Run 0---------------\u001b[0m\n",
@@ -274,11 +295,11 @@
       "\u001b[32mEntering save and stats zone-------------------------------\u001b[0m\n",
       "\u001b[32mOptimizing DIS for multiview classifier-------------------------------\u001b[0m\n",
       "\u001b[32mOptimizing DIS for concatenated classifier-------------------------------\u001b[0m\n",
-      "\t Convergence reached after 796 iterations\n",
       "\u001b[32mOptimization is done! Computing the bound values ans risks-------------------------------\u001b[0m\n",
       "\u001b[32mEntering save and stats zone-------------------------------\u001b[0m\n",
       "\u001b[32mOptimizing Lambda for multiview classifier-------------------------------\u001b[0m\n",
       "\u001b[32mOptimizing Lambda for concatenated classifier-------------------------------\u001b[0m\n",
+      "\t Convergence reached after 117 iterations\n",
       "\u001b[32mOptimization is done! Computing the bound values ans risks-------------------------------\u001b[0m\n",
       "\u001b[32mEntering save and stats zone-------------------------------\u001b[0m\n",
       "\u001b[34m\n",
@@ -295,7 +316,6 @@
       "\u001b[32mEntering save and stats zone-------------------------------\u001b[0m\n",
       "\u001b[32mOptimizing DIS for multiview classifier-------------------------------\u001b[0m\n",
       "\u001b[32mOptimizing DIS for concatenated classifier-------------------------------\u001b[0m\n",
-      "\t Convergence reached after 710 iterations\n",
       "\u001b[32mOptimization is done! Computing the bound values ans risks-------------------------------\u001b[0m\n",
       "\u001b[32mEntering save and stats zone-------------------------------\u001b[0m\n",
       "\u001b[32mOptimizing Lambda for multiview classifier-------------------------------\u001b[0m\n",
@@ -316,7 +336,6 @@
       "\u001b[32mEntering save and stats zone-------------------------------\u001b[0m\n",
       "\u001b[32mOptimizing DIS for multiview classifier-------------------------------\u001b[0m\n",
       "\u001b[32mOptimizing DIS for concatenated classifier-------------------------------\u001b[0m\n",
-      "\t Convergence reached after 866 iterations\n",
       "\u001b[32mOptimization is done! Computing the bound values ans risks-------------------------------\u001b[0m\n",
       "\u001b[32mEntering save and stats zone-------------------------------\u001b[0m\n",
       "\u001b[32mOptimizing Lambda for multiview classifier-------------------------------\u001b[0m\n",
@@ -351,16 +370,6 @@
     "\n",
     "                # Shuffle and split the dataset into training and testing\n",
     "                Xs_train, y_train, Xs_test, y_test = train_test_split(Xs, y, test_size=test_size, random_state=run*(i+1)*(j+1)*(k+1))\n",
-    "                \n",
-    "                # Transform to binary OVR (One Vs Rest) or OVO (One Vs One) if needed\n",
-    "                if TO_BINARY == \"ovr\":\n",
-    "                    Xs_train, y_train, Xs_test, y_test = multiclass_to_binary(Xs_train, y_train, Xs_test, y_test, type=TO_BINARY, label_1=label_1)\n",
-    "                elif TO_BINARY == \"ovo\":\n",
-    "                    Xs_train, y_train, Xs_test, y_test = multiclass_to_binary(Xs_train, y_train, Xs_test, y_test, type=TO_BINARY, label_1=label_1, label_2=label_2)\n",
-    "                elif TO_BINARY == \"other\":\n",
-    "                    y_train, y_test = other_binary_options(y_train, y_test)\n",
-    "                else:\n",
-    "                    print(colored(f\"WARNING: TO_BINARY={TO_BINARY}, continuing\", 'yellow'))\n",
     "\n",
     "                # Split the dataset into labeled and unlabeled\n",
     "                Xs_train, y_train, UlX, _ = s1_s2_split(Xs_train, y_train, s1_size=s1_size, random_state=(run+len(RUNS))*(i+1)*(j+1)*(k+1))\n",
@@ -376,6 +385,7 @@
     "                                                        use_dndf=False)\n",
     "                \n",
     "                # instantiate dNDF classifier for concatenated views\n",
+    "                # seperated_views = [[view] for view in Xs_train]\n",
     "                dNDF_concat = MultiViewBoundsDeepNeuralDecisionForests(nb_estimators=config[\"n_estimators\"],\n",
     "                                                        nb_views=len(X_train_concat),\n",
     "                                                        depth =config[\"max_depth\"],\n",
@@ -462,6 +472,26 @@
     "                    experiment_df.to_csv(file_name, sep=\" \", index=False)\n",
     "                    # TODO: add the posterior_Qv and posterior_rho to the experiment\n",
     "                del dNDF_mv, dNDF_concat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2034, 529)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xs_train[0].shape"
    ]
   },
   {
