Updated README with clearer instructions. removed bounds_alpha1_KL directory

--- a/empirical-evaluation-jupyter.ipynb
+++ b/empirical-evaluation-jupyter.ipynb
@@ -56,7 +56,7 @@
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "\n",
-    "from mvpb import MultiViewBoundsDeepNeuralDecisionForests, MajorityVoteBoundsDeepNeuralDecisionForests\n",
+    "from mvpb import MultiViewMajorityVoteLearner, MajorityVoteLearner\n",
     "from mvpb.util import uniform_distribution\n",
     "\n",
     "\n",
@@ -336,7 +336,7 @@
     "                X_test_concat = np.concatenate(Xs_test, axis=1)\n",
     "                    \n",
     "                # instantiate multiview dNDF classifier\n",
-    "                dNDF_mv = MultiViewBoundsDeepNeuralDecisionForests(nb_estimators=config[\"n_estimators\"],\n",
+    "                dNDF_mv = MultiViewMajorityVoteLearner(nb_estimators=config[\"n_estimators\"],\n",
     "                                                        nb_views=len(Xs_train),\n",
     "                                                        depth =config[\"max_depth\"],\n",
     "                                                        used_feature_rate=config[\"max_features\"],\n",
@@ -347,7 +347,7 @@
     "                # instantiate dNDF classifier for separate views and concatenated view\n",
     "                dNDF_per_view = []\n",
     "                for v in range(len(Xs_train)+1):\n",
-    "                    dNDF_per_view.append(MajorityVoteBoundsDeepNeuralDecisionForests(nb_estimators=config[\"n_estimators\"],\n",
+    "                    dNDF_per_view.append(MajorityVoteLearner(nb_estimators=config[\"n_estimators\"],\n",
     "                                                            depth =config[\"max_depth\"],\n",
     "                                                            used_feature_rate=config[\"max_features\"],\n",
     "                                                            random_state=run,\n",
